fix(formatter): handle fractional amounts; modernize Locale; extract rupee constant
- Sub-lakh branch now rounds fractional amounts to nearest rupee
  instead of crashing with ArithmeticException on longValueExact()
- Locale.of("en", "IN") replaces deprecated Locale ctor (Java 21)
- Three new tests cover zero, single rupee, fractional rounding