@@ -10,6 +10,7 @@ public final class ContractValueFormatter {
 
     private static final BigDecimal ONE_LAKH = new BigDecimal("100000");
     private static final BigDecimal ONE_CRORE = new BigDecimal("10000000");
+    private static final String RUPEE = "\u20B9";
 
     private ContractValueFormatter() {}
 
@@ -22,15 +23,16 @@ public final class ContractValueFormatter {
         }
         if (amount.compareTo(ONE_CRORE) >= 0) {
             BigDecimal crores = amount.divide(ONE_CRORE, 2, RoundingMode.HALF_UP);
-            return "\u20B9" + crores.toPlainString() + " Cr";
+            return RUPEE + crores.toPlainString() + " Cr";
         }
         if (amount.compareTo(ONE_LAKH) >= 0) {
             BigDecimal lakhs = amount.divide(ONE_LAKH, 0, RoundingMode.HALF_UP);
-            return "\u20B9" + lakhs.toPlainString() + " L";
+            return RUPEE + lakhs.toPlainString() + " L";
         }
         // Indian comma grouping (e.g. 5,500 / 99,999)
-        DecimalFormatSymbols symbols = DecimalFormatSymbols.getInstance(new Locale("en", "IN"));
+        DecimalFormatSymbols symbols = DecimalFormatSymbols.getInstance(Locale.of("en", "IN"));
         DecimalFormat fmt = new DecimalFormat("#,##,###", symbols);
-        return "\u20B9" + fmt.format(amount.longValueExact());
+        long rupees = amount.setScale(0, RoundingMode.HALF_UP).longValueExact();
+        return RUPEE + fmt.format(rupees);
     }
 }
